trunk/Archive2/33/4ef8b604d49a12/output
main.cpp:48:9: error: static assertion failed: !!
         static_assert (32 <= alignof (max_align_t), "!!");
         ^
